<resources>
    <string name="app_name">SheyStore</string>

    <!-- Firebase Auth-->
    <string name="default_web_client_id">1051780865838-iops8s06o9usi2lstmhjb6ick9l135c8.apps.googleusercontent.com</string>
    <string name="app_id">1:1051780865838:android:83e37b48f7c8dae0ee64bf</string>

    <!-- Landing Login Fragment-->
    <string name="vamos_a_entrar">¡Vamos a entrar!</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="o">o</string>
    <string name="ya_tienes_un_cuenta">¿Ya tienes un cuenta?</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="crear_una_cuenta">Crear una cuenta</string>
    <string name="sign_in_with_account">Inicia sesión</string>

    <!-- Create Account Fragment -->
    <string name="crea_tu_cuenta">Crea tu cuenta</string>
    <string name="correo_elect_nico">Correo electónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="otras_opciones">Otras opciones</string>
    <string name="not_have_account">¿No tienes cuenta?</string>

    <!-- Home Fragment-->
    <string name="buscar">Buscar</string>
    <string name="ofertas_especiales">Ofertas especiales</string>
    <string name="ver_todo">Ver todo</string>
    <string name="lo_sentimos_no_hemos_encontrado_resultados_a_partir_de_tu_b_squeda">¡Lo sentimos! No hemos encontrado resultados a partir de tu búsqueda.</string>
    <string name="m_s_popular">Más popular</string>
    <string name="descripci_n">Descripción</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio_total">Precio total</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="total_price">$%s</string>
    <string name="ir_a_pagar">Ir a pagar</string>
    <string name="eliminar_del_carrito">¿Eliminar del carrito?</string>
    <string name="cancelar">Cancelar</string>
    <string name="s_eliminar">Sí, eliminar</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="sexo">Sexo</string>
    <string name="tipo_de_usuario">Tipo de usuario</string>
    <string name="continuar">Continuar</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="ordenar_y_filtrar">Ordenar &amp; Filtrar</string>
    <string name="categor_as">Categorías</string>
    <string name="rango_de_precio">Rango de precio</string>
    <string name="ordenar_por">Ordenar por</string>
    <string name="rating">Rating</string>
    <string name="reset">Reset</string>
    <string name="aplicar">Aplicar</string>
    <string name="todo">Todo</string>
    <string name="verificar_compra">Verificar compra</string>
    <string name="direcci_n_de_env_o">Dirección de envío</string>
    <string name="lista_de_orden">Lista de Orden</string>
    <string name="continuar_con_el_pago">Continuar con el Pago</string>
    <string name="ooops_al_parecer_no_tienes_direcciones_de_entrega">¡Ooops! Al parecer no tienes direcciones de envío</string>
    <string name="default_shipping_address_not_default_selected">Presiona para seleccionar la dirección de envío</string>
    <string name="agregar_nueva_direcci_n">Agregar nueva dirección</string>
    <string name="detalles_de_la_direcci_n">Detalles de la dirección</string>
    <string name="nombre_de_la_direcci_n">Nombre de la dirección</string>
    <string name="hacer_esta_como_la_direcci_n_predeterminada">Hacer esta como la dirección predeterminada</string>
    <string name="agregar">Agregar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agregar_nueva_tarjeta">Agregar nueva tarjeta</string>
    <string name="n_mero_de_la_tarjeta">Número de la Tarjeta</string>
    <string name="nombre_de_la_tarjeta">Nombre de la tarjeta</string>
    <string name="fecha_de_vencimiento">Fecha de Vencimiento</string>
    <string name="mm_yy">MM/YY</string>
    <string name="_123">123</string>
    <string name="monto">Monto</string>
    <string name="env_o">Envío</string>
    <string name="total">Total</string>
    <string name="cvc">CVC</string>
    <string name="_1234_5678_9012_3456">1234 5678 9012 3456</string>
    <string name="confirmar_pago">Confirmar pago</string>
    <string name="agregar_nueva_tarjeta_de_pago">Agregar nueva tarjeta de pago</string>
    <string name="conectado">Conectado</string>
    <string name="ingresa_tu_cvc_para_confirmar_tu_compra">Ingresa tu CVC para confirmar tu compra</string>
    <string name="orden_confirmada">Orden confirmada</string>
    <string name="has_realizado_el_pedido_con_xito">Has realizado el pedido con éxito</string>
    <string name="ver_pedido">Ver pedido</string>
    <string name="ir_a_la_tienda">Ir a la tienda</string>
    <string name="dejar_opini_n">Dejar opinión</string>
    <string name="dejar_una_opini_n">Dejar una opinión</string>
    <string name="c_mo_estuvo_tu_pedido">¿Cómo estuvo tu pedido?</string>
    <string name="por_favor_da_tu_calificaci_n_y_tambi_n_tu_rese_a">Por favor da tu calificación y también tu reseña…</string>
    <string name="escribe_tu_opini_n">Escribe tu opinión</string>
    <string name="enviar">Enviar</string>
    <string name="completado">Completado</string>
    <string name="categorais_m_s_vendiddas">Categorías más vendiddas</string>
    <string name="exportar_a_excel">Exportar a Excel</string>
    <string name="cantidad_de_productos_vendidos_por_d_a">Cantidad de productos vendidos por día</string>
    <string name="ingresos_totales_por_d_a">Ingresos totales por día</string>
    <string name="cantidad_de_usuarios_registrados_por_d_a">Cantidad de usuarios registrados por día</string>
    <string name="backup_message">Puede crear un respaldo de su base de datos siguiendo estos pasos: \n\n 1- Acceda a la sección de administración de la base de datos. \n 2- Haga clic en "Crear Respaldo". \n 3- Descargue el archivo generado y guárdelo en un lugar seguro.</string>
    <string name="crear_respaldo">Crear respaldo</string>
    <string name="solo_los_administradores_pueden_crear_un_respaldo_de_la_base_de_datos">Solo los administradores pueden crear un respaldo de la base de datos.</string>
    <string name="por_favor_contacte_a_un_administrador_para_realizar_esta_acci_n">Por favor, contacte a un administrador para realizar esta acción.</string>
</resources>