<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo_sheystore"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_component_header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crea_tu_cuenta"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.SheyStore.textAppearanceHeadline4"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_account_email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        style="?attr/textInputOutlinedStyle"
        android:textColorHint="@color/color_text_hint"
        android:hint="@string/correo_elect_nico"
        app:startIconDrawable="@drawable/ic_mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_account_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_account_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        style="?attr/textInputOutlinedStyle"
        android:textColorHint="@color/color_text_hint"
        android:hint="@string/contrase_a"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_account_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/crear_cuenta"
        style="@style/Widget.SheyStore.Button"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:layout_marginHorizontal="40dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.SheyStore.textAppearanceCaption"
        android:text="@string/otras_opciones"
        android:textColor="@color/color_text_hint" />


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/create_account_sign_in_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_google"
        android:scaleType="fitCenter"
        android:elevation="16dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:layout_gravity="center_horizontal"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_component_label_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.SheyStore.textAppearanceCaption"
            android:text="@string/ya_tienes_un_cuenta"
            android:textColor="@color/color_text_hint" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/iniciar_sesi_n"
            android:textAppearance="@style/TextAppearance.SheyStore.textAppearanceCaption"
            android:textSize="12sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</merge>