<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/shape_gray_20dp_rounded_background"
    tools:context=".ui.paymentConfirm.view.PaymentConfirmDialog">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.SheyStore.textAppearanceHeadline5"
        android:text="@string/orden_confirmada"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/color_text_hint"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.SheyStore.textAppearanceBody2"
        android:text="@string/has_realizado_el_pedido_con_xito"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/payment_confirm_dialog_order"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:iconTint="@color/white"
        android:text="@string/ver_pedido"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        style="@style/Widget.SheyStore.Button"
        android:textColor="@color/white"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        android:backgroundTint="@color/black"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/payment_confirm_dialog_shopping"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:iconTint="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/ir_a_la_tienda"
        style="@style/Widget.SheyStore.Button"
        android:textColor="@color/black"
        android:backgroundTint="#D8D8D8"/>

</androidx.appcompat.widget.LinearLayoutCompat>