<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bottom_sheet_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:text="@string/eliminar_del_carrito"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <include android:id="@+id/bottom_sheet_item_cart"
        layout="@layout/item_cart"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_item_cart">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bottom_sheet_cancel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:iconTint="@color/white"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/cancelar"
            style="@style/Widget.SheyStore.Button"
            android:textColor="@color/white"
            android:backgroundTint="@color/color_primary_variant"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bottom_sheet_remove"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:iconTint="@color/white"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="5dp"
            android:text="@string/s_eliminar"
            style="@style/Widget.SheyStore.Button"
            android:textColor="@color/white"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            android:backgroundTint="@color/black"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>